--- a/public/html/game.html
+++ b/public/html/game.html
@@ -1,1 +1,11 @@
-sss
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="../css/game.css"></link>
+    </head>
+    <body>
+        <main>
+            <div class="A1"></div>
+        </main>
+    </body>
+</html>
