--- a/public/html/main.html
+++ b/public/html/main.html
@@ -1,10 +1,13 @@
 <html>
     <head>
+        <!-- Font for text --> 
+        <link href='https://fonts.googleapis.com/css?family=Roboto Mono' rel='stylesheet'>
+        <!-- Styles --> 
         <link rel="stylesheet" href="../css/style.css"></link>
     </head>
     <body>
         <main>
-            <div class="start"></div>
+            <div class="start play">Play</div>
         </main>
     </body>
 </html>
