--- a/public/html/main.html
+++ b/public/html/main.html
@@ -7,7 +7,13 @@
     </head>
     <body>
         <main>
-            <div class="start play">Play</div>
+            <div class="container">
+                <canvas class="circuit"></canvas>
+                <div class="title">HEX</div>
+                <div class="hexagon">
+                    <div class="start play">Play</div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
