--- a/public/html/game.html
+++ b/public/html/game.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8"> 
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>Hex</title>
         <link rel="stylesheet" href="../css/game.css"></link>
     </head>
     <body>
-        <main>
-            <div class="A1"></div>
-        </main>
+        <ul id="grid" class="clear">
+            <li>
+                <div class="hexagon"></div>
+            </li>
+            <li>
+                <div class="hexagon"></div>
+            </li>
+        </ul>
+        <ul id="grid" class="clear">
+            <li>
+                <div class="hexagon"></div>
+            </li>
+            <li>
+                <div class="hexagon"></div>
+            </li>
+        </ul>
     </body>
 </html>
