--- a/public/html/main.html
+++ b/public/html/main.html
@@ -8,12 +8,13 @@
     <body>
         <main>
             <div class="container">
-                <canvas class="circuit"></canvas>
+                <canvas class="circuit" ></canvas>
                 <div class="title">HEX</div>
                 <div class="hexagon">
                     <div class="start play">Play</div>
                 </div>
             </div>
         </main>
+        <script src="../js/script.js"></script>
     </body>
 </html>
