--- a/public/html/main.html
+++ b/public/html/main.html
@@ -2,17 +2,23 @@
     <head>
         <!-- Font for text --> 
         <link href='https://fonts.googleapis.com/css?family=Roboto Mono' rel='stylesheet'>
+        <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
         <!-- Styles --> 
         <link rel="stylesheet" href="../css/style.css"></link>
     </head>
     <body>
         <main>
             <div class="container">
-                <canvas class="circuit" ></canvas>
-                <div class="title">HEX</div>
-                <div class="hexagon">
+                <canvas class="circuit centring buter" ></canvas>
+                <div class="title centring">HEX</div>
+                <div class="hexagon centring buter">
                     <div class="start play">Play</div>
                 </div>
+
+             <div class="bar centring">
+                 <div class="info">Games:23</div>
+                 <div class="info">Players:12</div>
+             </div>
             </div>
         </main>
         <script src="../js/script.js"></script>
