--- a/public/game.html
+++ b/public/game.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8"> 
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Hex</title>
-        <link rel="stylesheet" href="../css/game.css"></link>
+        <link rel="stylesheet" href="stylesheets/game.css"></link>
     </head>
     <body>
     <div class="grid">
@@ -686,5 +686,5 @@
     </div>
     
     </body>
-    <script src="../js/game.js"></script>
+    <script src="/javascripts/game.js"></script>
 </html>
