--- a/public/splash.html
+++ b/public/splash.html
@@ -4,14 +4,14 @@
         <link href='https://fonts.googleapis.com/css?family=Roboto Mono' rel='stylesheet'>
         <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
         <!-- Styles --> 
-        <link rel="stylesheet" href="../css/style.css"></link>
+        <link rel="stylesheet" href="stylesheets/style.css"></link>
     </head>
     <body>
         <main>
             <div class="container">
                 <canvas class="circuit centring buter" ></canvas>
                 <div class="title centring">HEX</div>
-                <div class="hexagon centring buter">
+                <div id="clicker" class="hexagon centring buter" onclick="redirect(id)">
                     <div class="start play">Play</div>
                 </div>
 
@@ -21,6 +21,6 @@
              </div>
             </div>
         </main>
-        <script src="../js/script.js"></script>
+        <script src="javascripts/script.js"></script>
     </body>
 </html>
