--- a/public/splash.html
+++ b/public/splash.html
@@ -16,7 +16,7 @@
                 </div>
 
              <div class="bar centring">
-                 <div class="info">Games:<span id="games"><=%games%></span></div>
+                 <div class="info">Games:<span id="games"><span></div>
                  <div class="info">Players:12</div>
              </div>
             </div>
