--- a/public/game.html
+++ b/public/game.html
@@ -7,8 +7,10 @@
         <link rel="stylesheet" href="stylesheets/game.css"></link>
     </head>
     <body>
-    
-    
+        <div class="square blue bot left"></div>   
+        <div class="square blue top right"></div>   
+        <div class="square white bot right"></div>   
+        <div class="square white top left"></div>   
     </body>
     <script src="/javascripts/game.js"></script>
 </html>
