--- a/public/splash.html
+++ b/public/splash.html
@@ -17,7 +17,7 @@
 
              <div class="bar centring">
                  <div class="info">Games:<span id="games"><span></div>
-                 <div class="info">Players:12</div>
+                 <div class="info">Completed:<span id="completed"></span></div>
              </div>
             </div>
         </main>
